# harfbuzz-icu-freetype

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  updating-libraries.md
freetype-2.6/: CMakeLists.txt
freetype-2.6/builds/unix/: ftsystem.c
freetype-2.6/include/config/: ftoption.h
freetype/builds/cmake/: FindBrotliDec.cmake
icu/common/: Makefile  Makefile.in  brkeng.cpp  brkiter.cpp  bytesinkutil.h  characterproperties.cpp  charstr.cpp  charstr.h  cmemory.h  dictbe.cpp  dictionarydata.h  edits.cpp  filteredbrk.cpp  hash.h  loadednormalizer2impl.cpp  localebuilder.cpp  localematcher.cpp  localeprioritylist.cpp  localeprioritylist.h  locdispnames.cpp  locdistance.cpp  locdistance.h  locdspnm.cpp  locid.cpp  loclikely.cpp  loclikelysubtags.cpp  loclikelysubtags.h  locmap.cpp  lsr.cpp  lsr.h  norm2_nfc_data.h  normalizer2impl.cpp  normalizer2impl.h  normlzr.cpp  patternprops.h  propname_data.h  putil.cpp  putilimp.h  rbbi.cpp  rbbi_cache.cpp  (+73 more)
icu/common/unicode/: bytestream.h  localebuilder.h  localematcher.h  localpointer.h  locid.h  platform.h  stringpiece.h  uloc.h  umachine.h  umutablecptrie.h  urename.h  utext.h  utrace.h  uvernum.h
